sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:5: error: not found: value mouv
    mouv=true
    ^AlgGnomeSort:7: error: not found: value mouv
    while(mouv && p!=0){
          ^AlgGnomeSort:8: error: not found: value mouv
      mouv=false
      ^AlgGnomeSort:10: error: not found: value mouv
        mouv=true
        ^