sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
	val lgr=getNombreValeurs()
  for(p<-1 to lgr-2){
    mouv=true
    var ptemp=p
    while(mouv && p!=0){
      mouv=false
      if(plusPetit(ptemp,ptemp-1)){
        mouv=true
        echange(ptemp,ptemp-1)
       ptemp-=1
      }
    }
  }
}